--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/deedubs/react-webpack",
   "devDependencies": {
+    "jsx-loader": "^0.12.2",
     "react": "^0.12.1",
     "react-router": "^0.11.4",
     "webpack": "^1.4.13",
